Add google analytics config

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,6 @@ rss:
 fancybox: true
 favicon: favicon.ico
 duoshuo_shortname: jeoygin
-google_analytics:
+google_analytics: UA-56551350-1
 baidu_tongji: true
 
